<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F8FA"
    tools:context=".OtpVerify">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo_otp_verify"
            android:layout_width="168dp"
            android:layout_height="193dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img" />

        <TextView
            android:id="@+id/hiText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/welcome_otp_hello"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_otp_verify" />


        <TextView
            android:id="@+id/displayNumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:hint="@string/xxxxxxxxxx"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/enterOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/enter_otp"
            android:textStyle="bold"
            android:textColor="#3C3838"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hiText" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:padding="15dp">

            <EditText
                android:id="@+id/n1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/textboxoutline"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/n2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/textboxoutline"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/n3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/textboxoutline"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/n4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/textboxoutline"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/n5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/textboxoutline"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/n6"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/textboxoutline"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/did_not"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/resend_otp"
                android:textStyle="bold"
                android:textColor="@color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/VerifyButton"
            android:layout_width="218dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="#5C64FD"
            android:background="@drawable/roundcorner"
            android:text="Continue"
            android:textColor="#FFFFFF"
            app:cornerRadius="20dp" />



    </LinearLayout>

</ScrollView>